--- a/index.html
+++ b/index.html
@@ -3,15 +3,40 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Gaurav Kumar</title>
+  <title>Gaurav Kmar</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <img class="logo" src="images/gaurav.png" alt="logo-img">
+    <a class="navbar-brand" href="#profile-section">Gaurav Kumar</a>
 
-<div class="top-container">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#footer">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#My-Skills">My Skills</a>
+        </li>
+      </ul>
+
+    </div>
+  </nav>
+
+  <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud">
     <div class="title-text">
       <h1>I'm Gaurav.</h1>
@@ -21,14 +46,16 @@
     <img class="mountain" src="images/mountain.png" alt="mountain-img">
   </div>
 
-  <div class="middle-container">
-    <div class="profile">
-      <img class="gaurav-img" src="images/gaurav.png" alt="gauarv-profile-img">
-      <h2>Hello.</h2>
-      <p class="intro">I am Full-Stack Web Developer. HTML, CSS, Javascript, Node, Rect, MongoDB, Web3 and DApps. I ❤️ playing Online Games Like PUBGM.</p>
-    </div>
-    <hr>
-    <div class="skills">
+    <div class="middle-container" id="profile-section">
+      <div class="profile">
+        <img class="gaurav-img" src="images/gaurav.png" alt="gauarv-profile-img">
+        <h2>Hello.</h2>
+        <p class="intro">I am Full-Stack Web Developer. HTML, CSS, Javascript, Node, Rect, MongoDB, Web3 and DApps. I ❤️ playing Online Games Like PUBGM.</p>
+      </div>
+
+  <hr>
+
+    <div class="skills" id="My-Skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="code-img" src="https://media.giphy.com/media/3p50WGyUqeU5W/giphy.gif" alt="code-img">
@@ -38,29 +65,31 @@
 
       </div>
       <div class="skill-row">
-        <img class="chilli-img" src="images/info.jpg" alt="Info-img">
+        <img class="info-img" src="images/info.jpg" alt="Info-img">
 
         <h3>Information Security</h3>
         <p>Information security is a broad field that covers many areas such as physical security, endpoint security, data encryption, and network security.</p>
 
       </div>
     </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you love hot wings as much as I do.</h3>
-      <p class="contact-message">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
-      <a class="btn" href="mailto:gauravkerth@gmail.com">CONTACT ME</a>
+
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>If you love hot wings as much as I do.</h3>
+    <p class="contact-message">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+    <a class="btn" href="mailto:gauravkerth@gmail.com">CONTACT ME</a>
+  </div>
+  </div>
+
+
+    <div class="bottom-container" id="footer">
+      <a class="footer-link" href="https://www.linkedin.com/in/gaurav-kumar-a6250823b">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/gauravgamers14?t=B7i8oLuU-PODS5RvizQiQA&s=08">Twitter</a>
+      <a class="footer-link" href="https://www.facebook.com/ankukumar.ankukumar.9?mibextid=ZbWKwL">Facebook</a>
+      <p class="copyright">© 2022 Gaurav Kumar @ Web Developer.</p>
     </div>
-  </div>
 
-
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/gaurav-kumar-a6250823b">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/gauravgamers14?t=B7i8oLuU-PODS5RvizQiQA&s=08">Twitter</a>
-    <a class="footer-link" href="https://www.facebook.com/ankukumar.ankukumar.9?mibextid=ZbWKwL">Facebook</a>
-    <p class="copyright">© 2022 Gaurav Kumar @ Web Developer.</p>
-  </div>
 </body>
 
 </html>
