--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>If you love hot wings as much as I do.</h3>
-    <p class="contact-message">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+    <h3>I'm currently available for freelance work.</h3>
+    <p class="contact-message">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get to touch.</p>
     <a class="btn" href="mailto:gauravkerth@gmail.com">CONTACT ME</a>
   </div>
   </div>
