--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="profile">
         <img class="gaurav-img" src="images/gaurav.png" alt="gauarv-profile-img">
         <h2>Hello.</h2>
-        <p class="intro">I am Full-Stack Web Developer. HTML, CSS, Javascript, Node, Rect, MongoDB, Web3 and DApps. I ❤️ playing Online Games Like PUBGM.</p>
+        <p class="intro">I am Full-Stack Web Developer. HTML, CSS, Javascript, Node, Rect, MongoDB, Web3 and DApps. I ❤️ playing Online Games Like BGMI.</p>
       </div>
 
   <hr>
