--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h2>Get In Touch</h2>
     <h3>I'm currently available for freelance work.</h3>
     <p class="contact-message">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get to touch.</p>
-    <a class="btn" href="mailto:gauravkerth@gmail.com">CONTACT ME</a>
+    <a class="btn" href="mailto:gauravkreth@gmail.com">CONTACT ME</a>
   </div>
   </div>
 
